--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,5 +3,5 @@
 @import "tab";
 
 div {
-  background-image: url("../pexels-photo-1529662.jpeg");
+  background-image: url("@/assets/pexels-photo-1529662.jpeg");
 }
